Custom selects + some interactivity (extendedinput)

--- a/scss/_all-imports.scss
+++ b/scss/_all-imports.scss
@@ -50,6 +50,7 @@
 @import "components/custom/navbar";
 @import "components/custom/glyphicons";
 @import "components/custom/panels";
+@import "components/custom/select-custom";
 @import "components/custom/utilities";
 @import "components/custom/type";
 
