--- a/scss/_vars-custom.scss
+++ b/scss/_vars-custom.scss
@@ -1,7 +1,7 @@
 // add the variables you want to override in bootstrap
 // --------------
 
-$icon-font-path: "/fonts";
+$icon-font-path: "/fonts/";
 
 // Grays
 // -------------------------
