--- a/scss/components/custom/_panels.scss
+++ b/scss/components/custom/_panels.scss
@@ -2,25 +2,31 @@
   Overrides/additions for bootstrap _panels component
    ========================================================================== */
 
-/* ==========================================================================
-  Overrides/additions for bootstrap _panels component
-   ========================================================================== */
-
 .panel .panel-body > p:last-child {
   margin-bottom: 0;
 }
 
-.panel-heading {
-  @include clearfix;
-  padding: 15px; // higher than normal 10px 15px;
-  .panel-title {
-    font-size: 19px;
-    line-height: 1;
+.panel.panel-default {
+  border: none;
+  background: none;
+  box-shadow: none;
+  .panel-heading {
+    @include clearfix;
+    padding: 15px; // higher than normal 10px 15px;
+    background: none;
+    .panel-title {
+      font-size: 19px;
+      line-height: 1;
+    }
+    h1, h2, h3, h4 {
+      float: left;
+      margin: 0;
+      padding: 0;
+    }
   }
-  h1, h2, h3, h4 {
-    float: left;
-    margin: 0;
-    padding: 0;
+  .panel-footer {
+    background: none;
+    border: none;
   }
 }
 
