Improve the design implementation - more detail implementation

--- a/_includes/forms/invoice-content.html
+++ b/_includes/forms/invoice-content.html
@@ -1,14 +1,13 @@
 <div class="panel panel-default" data-toggle-group="true">
   <div class="panel-heading clearfix">
 
-    <div class="form-group pull-right">
+    <h3 class="panel-title">Items</h3>
+    <div class="panel-heading-controls">
       <div class="btn-group">
-      <a href="#" class="btn btn-default active" data-toggle-group-trigger="rate-hourly">Hour based</a>
-      <a href="#" class="btn btn-default" data-toggle-group-trigger="rate-fixed">Fixed price</a>
+        <a href="#" class="btn btn-default active" data-toggle-group-trigger="rate-hourly">Hour based</a>
+        <a href="#" class="btn btn-default" data-toggle-group-trigger="rate-fixed">Fixed price</a>
       </div>
     </div>
-
-    <h3 class="panel-title">Items</h3>
 
   </div>
   <div class="panel-body">
