--- a/_includes/forms/invoice-submit.html
+++ b/_includes/forms/invoice-submit.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default">
+<div class="panel panel-default panel-minimal">
   <div class="panel-body">
     <a href="/invoices.html" class="btn pull-left">Cancel</a>
 
