--- a/scss/components/custom/_page-header-custom.scss
+++ b/scss/components/custom/_page-header-custom.scss
@@ -10,9 +10,11 @@
   .btn-default {
     @include button-variant(#FFF, darken($brand-secondary, 10%), darken($brand-secondary, 10%));
   }
-  > .btn-toolbar,
-  > .btn,
-  > .form-inline {
-    margin-top: 16px;
+  .container {
+    > .btn-toolbar,
+    > .btn,
+    > .form-inline {
+      margin-top: 8px;
+    }
   }
 }
