--- a/_includes/globalnav.html
+++ b/_includes/globalnav.html
@@ -18,7 +18,7 @@
 
     <h4>Settings</h4>
     <ul class="unstyled">
-      <li><a href="settings.html">App settings</a></li>
+      <li><a href="app-settings.html">App settings</a></li>
       <li><a href="user-settings.html">User settings</a></li>
     </ul>
 
