More small improvements

--- a/scss/components/custom/_select-custom.scss
+++ b/scss/components/custom/_select-custom.scss
@@ -43,6 +43,7 @@
     right: 1px;
     background: #FFF;
     pointer-events: none;
+    color: #000;
     width: 24px;
     height: 31px;
     border-left: 1px solid $input-border;
