Improvements to style/better implementation of summary/better globalnav

--- a/_includes/globalnav.html
+++ b/_includes/globalnav.html
@@ -3,32 +3,32 @@
     <p><strong>HTML prototype navigation</strong> - use CTRL+M to toggle this menu</p>
 
     <h4>Contacts</h4>
-    <ul class="unstyled">
+    <ul class="bordered-list">
       <li><a href="invoices.html">Overview</a></li>
       <li><a href="add-invoice.html">Add invoice</a></li>
       <li><a href="edit-invoice.html">Edit invoice</a></li>
     </ul>
 
     <h4>Clients</h4>
-    <ul class="unstyled">
+    <ul class="bordered-list">
       <li><a href="clients.html">Overview</a></li>
       <li><a href="add-client.html">Add client</a></li>
       <li><a href="edit-client.html">Edit client</a></li>
     </ul>
 
     <h4>Settings</h4>
-    <ul class="unstyled">
+    <ul class="bordered-list">
       <li><a href="app-settings.html">App settings</a></li>
       <li><a href="user-settings.html">User settings</a></li>
     </ul>
 
     <h4>Statistics</h4>
-    <ul class="unstyled">
+    <ul class="bordered-list">
       <li><a href="stats.html">Overview</a></li>
     </ul>
 
     <h4>Documentation</h4>
-    <ul class="unstyled">
+    <ul class="bordered-list">
       <li><a href="styleguide.html">Styleguide</a></li>
       <li><a href="mobile.html">Mobile</a></li>
     </ul>
