--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 
 {% include grumpicon.html %}
 <link rel="stylesheet" href="/css/skin.css">
-<link rel="stylesheet" href="/js/plugins/jquery.jekyll.globalnav/globalnav.css">
+<link rel="stylesheet" href="/css/prototype.css">
 <link rel="stylesheet" href="/bower_components/nvd3/nv.d3.css">
 
 {% if page.environment == 'styleguide' %}
