--- a/scss/_all-imports.scss
+++ b/scss/_all-imports.scss
@@ -27,6 +27,7 @@
 @import "components/bootstrap/glyphicons";
 @import "components/bootstrap/grid";
 @import "components/bootstrap/input-groups";
+@import "components/bootstrap/labels";
 @import "components/bootstrap/list-group";
 @import "components/bootstrap/modals";
 @import "components/bootstrap/navs";
