--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,15 +23,11 @@
 
     <div class="navbar-right navbar-collapse collapse">
       <ul class="nav navbar-nav bordered">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Instellingen">
+        <li>
+          <a href="app-settings.html" title="Instellingen">
             <i class="glyphicon glyphicon-cog"></i>
             Instellingen
-            <b class="caret"></b>
           </a>
-          <ul class="dropdown-menu">
-            <li><a href="/app-settings.html">Settings</a></li>
-          </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="John Doe">
