Revert "Delete the relevant part for stats to prepare for exercise tag"
This reverts commit c695821267736061b3a0efa0ec1161e7b2072f4e.

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -24,6 +24,12 @@
 <!-- State loader -->
 <script src="bower_components/state-loader/build/state-loader.js"></script>
 
+<!-- Statistics nvd3 -->
+<script src="/bower_components/d3/d3.js" type="text/javascript"></script>
+<script src="/bower_components/nvd3/nv.d3.js"></script>
+
+<script src="js/stats.js"></script>
+
 <!-- own tiny script file -->
 <script src="js/app.js"></script>
 
