--- a/scss/_all-imports.scss
+++ b/scss/_all-imports.scss
@@ -90,4 +90,5 @@
    ========================================================================== */
 
 @import "screens/login";
+@import "screens/stats";
 @import "screens/mobile";
