--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -21,6 +21,9 @@
 <script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/tab.js"></script>
 <script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/transition.js"></script>
 
+<!-- State loader -->
+<script src="bower_components/state-loader/build/state-loader.js"></script>
+
 <!-- Statistics nvd3 -->
 <script src="/bower_components/d3/d3.js" type="text/javascript"></script>
 <script src="/bower_components/nvd3/nv.d3.js"></script>
