--- a/scss/_all-imports.scss
+++ b/scss/_all-imports.scss
@@ -67,6 +67,7 @@
 @import "components/custom/bordered-list";
 @import "components/custom/sortable-table";
 @import "components/custom/account-numbers";
+@import "components/custom/pop-messages";
 
 /* ==========================================================================
   Third party CSS components
